State the endpoints for GET requests

--- a/views/api.html
+++ b/views/api.html
@@ -7,6 +7,11 @@
     <title>Car Reviews Api</title>
   </head>
   <body>
-    <h1>GET /</h1>
+    <h3>GET /users</h3>
+    <p>retrieve all users information</p>
+    <h3>GET /users/:id</h3>
+    <p>retrieve specific user information</p>
+    <h3>GET /users/names</h3>
+    <p>retrieve all names of users</p>
   </body>
 </html>
