Add span tags to paragraphs

--- a/views/api.html
+++ b/views/api.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Car Reviews Api</title>
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    <h3>GET /users</h3>
+    <h2>http://localhost:3000</h2>
+    <h3>GET <span>/users</span></h3>
     <p>retrieve all users information</p>
-    <h3>GET /users/:id</h3>
+    <h3>GET <span>/users/:id</span></h3>
     <p>retrieve specific user information</p>
-    <h3>GET /users/names</h3>
+    <h3>GET <span>/users/names</span></h3>
     <p>retrieve all names of users</p>
   </body>
 </html>
